--- a/template/confirmation.html
+++ b/template/confirmation.html
@@ -19,9 +19,8 @@
           <h1 class="text-5xl m-4">Congralations </h1>
           <h3 class="text-2xl  m-4">Download Your Ticket for Journey</h1>
             <p>/{{pdfname}}/</p>
-            <a href="/{{pdfname}}/" download="">Download</a>
+            <a href="/{{pdfname}}/" download>Download</a>
             <a href="/">Back to Home</a>
-            
         </div>
       </div>
       <script>
