--- a/template/fetchflights.html
+++ b/template/fetchflights.html
@@ -14,11 +14,13 @@
   <body class="bg-red-300">
     {% include 'min_nav.html' %}
     {% if not user.is_authenticated %}
-    <div class="alert bg-red-700 text-center font-bold text-2xl text-white my-0" id="alert" role="alert">For booking you need to first login or Register</div>    
+    <div  " class="alert bg-red-700 text-center font-bold text-2xl text-white my-0" id="alert" role="alert">For booking you need to first login or Register</div>    
     {% endif  %} 
-   <!-- <fecth flight> -->
-    <div class="w-8/12 shadow-2xl  mx-auto border-4  outline-none border-indigo-700">
-      <div class="flex-col justify-center">
+    <!-- <fecth flight> -->
+      {% include 'spinner.html' %}
+      <div class="w-8/12 shadow-2xl  mx-auto border-4  outline-none border-indigo-700" id="flights_container">
+      
+      <div  class="flex-col justify-center">
         {% for i in Flights %}
         <form id="{{i.Temparal_ID}}" action="/fetchflights/{{i.Temparal_ID}}/" method="post">
           {% csrf_token %}
@@ -80,8 +82,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script>
-        // const ticket_text = JSON.parse(document.getElementById('ticket_text').textContent)
-        // console.log(ticket_text);
+
+        //spinner feature
+        // document.getElementById("spinner").style.display="block"
+        document.getElementById("flights_container").style.display="none"
+
+        window.onload = function() {
+          setTimeout(function() {
+            document.getElementById("flights_container").style.display="block"
+            document.getElementById("spinner").style.display="none"
+            
+          }, 2000);
+        };
+
+
            // nav bar feature 
          // Toggle dropdown menu for flights button
       function toggleDropdown() {
