--- a/template/home.html
+++ b/template/home.html
@@ -25,8 +25,9 @@
     }
     </style>
 <body>
-   {% include 'navbar.html' %}
-
+  {% include 'navbar.html' %}
+  
+  {% include 'popularPlaces.html' %}
   <div id="carousel" class="w-full py-4  bg-center bg-cover flex items-center justify-center">
     <div class="flex justify-center items-center">
       <form class="px-2 py-7" id="form" action="/fetchflights/" method="POST">
@@ -56,6 +57,7 @@
       </form>
     </div>
   </div>
+  
   {% include 'footer.html' %}
 
   <script>   
